style.css
/*home page*/
header{
    position: relative;
    bottom: 43%;
    text-align: center;
    font-family: 'Francois One', sans-serif;
    color: salmon;
    height: 20%;
    font-size: 100%;

}

.glyphicon-question-sign{
    position: absolute;
    right: 4%;
    top: 8px;
    color: gray;
    border-radius: 50%;
    z-index: 10;
}

.modal-body{
    color: slategrey;
    font-size: 19px;
}

.view-container{
    width:90%;
    margin:10% auto;
    position:relative;
}
/*Log-in page */
.welcome_body {
    background-color: #B2DFDB;
    overflow:visible;
    color:white;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 2.2em;
    vertical-align: middle;
    position:relative;
}

.form-group {
    position: absolute;
    right: 50%;
    transform:translate(55%,45%);
    -ms-transform:translate(55%,45%);
    -webkit-transform:translate(55%,45%);
    -moz-transform:translate(55%,45%);
    -o-transform:translate(55%,45%);
    height: 32vh;
    width: 100%;
}

.form-control{
    width:90%;
    height:20%;
}

.forgot-password{
    font-size: 0.65em;
    position:relative;
    bottom: 38px;
}

/*welcome page*/
.welcome_body{
    font-size: 3em;
    /*position: absolute;*/
    /*bottom: 50%;*/
    /*right: 52.5%;*/
    /*transform:translate(54%,47%);*/
    /*-ms-transform:translate(54%,47%);*/
    /*-webkit-transform:translate(54%,47%);*/
    /*-moz-transform:translate(54%,47%);*/
    /*-o-transform:translate(54%,47%);*/
    /*height: 30vh;*/
    /*width: 77%;*/
}

.btn{
    background: #74ada0;
    border: black;
    color:white;
    font-family:NTR;
}
.button-spacing > a:not(:last-child){
    margin-bottom: 2%;

}

.button-spacing > a:first-child{
    margin-top: 2%;
}

.welcome_body .btn-default:hover,
.welcome_body .btn-default:focus,
.welcome_body .btn-default:active,
.open>.dropdown-toggle.welcome_body .btn .btn-default .chevronButton .initialSubmit{
    background-color: #368e8b;
    color:white;
    /*border-color:;*/

}



/*age range page*/
.age-range{
    position: absolute;
    bottom: 10px;
}

.chevronButton{
    border-radius: 100%;
    width: 47px;
    height:47px;
}

.age-user-btn, .age-btn{
    padding:4%;
    font-size:17px;
}

.age-range-buttons{
    margin-top:10px;
}
/*distance page*/

.current-location{
    margin-top:4%;
}

.input_text{
    width:100%;
    color:grey;
}

.previous-next{
    margin-top:10%;
}

.distance-btn{
    padding:5%;
    font-size:18px;
}

.miles, .user-age, .age{
    color: #368e8b;
    font-weight: bolder;
    /*text-decoration: underline;*/
}

.buttonHighlighted{
    background-color: #368e8b;
    color: white;

}

.glyphicon-search{
    top: 4px;
}

/*interests pages*/
.interest-btn-home, .interest-btn-out, .interest-btn-active, .interest-btn-travel{
    padding: 3%;
    margin-bottom: 5%;
    font-size: 16px;
}

.initialSubmit{
    padding:15px;
}

.input-fyi{
    color: #368e8b;
    font-size: 13px;
    position: relative;
    bottom: 6px;
    font-family: Quicksand;
}

/*sign-up email page*/

.signup-button{
    padding: 10%;
}
.selectedButton{
    background-color: #368e8b;
}

.match_content {
    width:78vw;
    margin:auto;
    font-size: 0.7em;
}

.match_card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    background-color: #ffffff;
    color:#000000;
    overflow: hidden;
}

.match_buttons {
    display:flex;
    justify-content: space-around;
    margin-top:8vw;
}

.match_name,.label {
    background-color: #559385;
    color:#ffffff;
}

.match_name {
    padding:0 5%;
}

.btn.btn_match {
    width: 24vw;
    height: 24vw;
    border-radius: 12vw;
    font-size: 2.5em;
}

.match_interests, .match_description{
    text-align: center;
}


/*before sample match user FYI page*/
.note-for-sample-match{
    top: 3px;
}

.btn-block{
    font-size: 20px;
}

/*sign up email page*/
.input_text{
    /*position: absolute;*/
    top: 69px;
}

.submitSignup{
    position: absolute;
    margin-top: 19px;
}

.alert-danger{
    font-size:50%;
    margin-bottom: 0;
}

.invalidEmail{
    position: relative;
    top: 60px;
}


/*************************
FREQUENTLY ASKED QUESTIONS
**************************/

.faq_body{
    /*background-color: #B2DFDB;*/
    overflow:visible;
    /*color:white;*/
    font-family: 'Open Sans Condensed', sans-serif;
    vertical-align: middle;
    font-size: 1.6em;
    margin:0;
    /*padding: 10px;*/
    width:100%;
    height:100%;
    min-height:100%;
}
.faq_body h1 {
    /*margin: 5%;*/
    text-align:center;
    font-family: 'Francois One', sans-serif;
    color:gray;
}
div.list-group {
    margin: 10%;
    font-size:0.55em;
    position:relative;
    color: black;
}
.question {
    font-weight:bold;
}
.answer{
    font-size: 0.9em;
    /*display:none;*/
    height:auto;
    width:100%;
    background:white;
    color:grey;
    border: 1px solid rgb(221, 221, 221);
    padding: 5px 20px;
}

.question,
.answer {
    cursor: pointer;
}

/***********************
SignUp Paragraph
************************/

.signup-paragraph-page textarea{
    color:  dimgray;
    width: 100%;
    max-width: 100%;
    font-family: 'Dosis', sans-serif;
    font-size: 16px;
}
.signup-paragraph-page p .alert {
    margin-bottom: 15px;
}

.textbox-fyi{
    color:white;
}

/**********************
Terms and Conditions page
**********************/

.terms-and-conditions .textarea{
    color: grey;
    background-color: white;
    height: 50vh;
    margin-bottom: 10px;
    width:100%;
    font-family: 'Dosis', sans-serif;
    font-size: 16px;
    overflow: scroll;
    list-style: none;
    padding: 0px 10px;
    border-radius: 10px;
}

.terms-and-conditions input[type=checkbox] {
    margin-right: 15px;
    margin-bottom: 15px;
}

.terms-and-conditions button {
    /*width: 150px;*/
    /*font-size: 1.2em;*/
    /*margin-bottom: 100px;*/
    /*display: block;*/
}

#accept{
    font-family: Quicksand;
}


/**********************
Signup Photo page
**********************/

.signup-photo-page img {
    max-width: 100%;
}



/**********************
Matches Page - Extra edits
***********************/

.thumbs {
    max-height: 100px;
    max-width: 100px;
}

